--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NewBiz Bootstrap Template</title>
+  <title>ToggleX</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -253,7 +253,7 @@
             <div class="box">
               <div class="icon"><i class="fa fa-users" style="color: #d6ff22;"></i></div>
               <h4 class="title"><a href="">Online marketing & advertising</a></h4>
-              <p class="description">Digital marketing is the component of marketing that utilizes the internet and online-based digital technologies such as computers, mobile phones, and other digital media platforms.
+              <p class="description">Digital marketing is the component of marketing that utilizes the internet-based digital technologies such as computers, mobile phones, and other digital media platforms.
               <!-- <br> -->
               <!-- <br> -->
               <!-- Trigger/Open The Modal -->
@@ -266,7 +266,7 @@
             <div class="box">
               <div class="icon"><i class="fa fa-video-camera" style="color: #4680ff;"></i></div>
               <h4 class="title"><a href="">Videos & photos for Project</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi
+              <p class="description">Promotional videos are also used to highlight a specific corporate initiative, service, or simply as a means of advertisement. And also wear providing photography service for your projects.
               <!-- <br> -->
               <!-- <br> -->
               <!-- Trigger/Open The Modal -->
@@ -553,7 +553,7 @@
     <!--==========================
       Clients Section
     ============================-->
-    <section id="clients" class="section-bg">
+    <!-- <section id="clients" class="section-bg">
 
       <div class="container">
 
@@ -564,7 +564,7 @@
 
         <div class="row no-gutters clients-wrap clearfix wow fadeInUp">
 
-          <!-- <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="client-logo">
               <img src="img/clients/client-1.png" class="img-fluid" alt="">
             </div>
@@ -592,7 +592,7 @@
             <div class="client-logo">
               <img src="img/clients/client-5.png" class="img-fluid" alt="">
             </div>
-          </div> -->
+          </div>
         
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="client-logo">
@@ -616,7 +616,7 @@
 
       </div>
 
-    </section>
+    </section> -->
 
     <!--==========================
       Contact Section
