--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="box">
               <div class="icon"><i class="fa fa-users" style="color: #d6ff22;"></i></div>
               <h4 class="title"><a href="">Online marketing & advertising</a></h4>
-              <p class="description">Digital marketing is the component of marketing that utilizes the internet-based digital technologies such as computers, mobile phones, and other digital media platforms.
+              <p class="description">Digital marketing is the component of marketing that utilizes the internet and online-based digital technologies such as computers, mobile phones, and other digital media platforms.
               <!-- <br> -->
               <!-- <br> -->
               <!-- Trigger/Open The Modal -->
